--- a/hayhay/resources/string_en.properties
+++ b/hayhay/resources/string_en.properties
@@ -1,4 +1,4 @@
-favorite_cate=Favorite Categories
+favorite_cates=Favorite Categories
 hot_news=Hot News
 news.economic=Economic
 news.biz=Business
@@ -14,12 +14,16 @@ news.startup=Start Up
 news.construction=Construction
 news.funny=Funny
 settings.mixnews=Show VietNam news and world news together
+favorite_countries=Show News of Countries
 settings=Settings
 news.sience=Science
 news.politics=Politics
 HotNews=Hot News
 Economic=Economic
 Business=Business
+Politics=Politics
+Science=Science
+Opinion=Opinion
 Sport=Sport
 Tech=Tech
 StatUp=StartUp
@@ -93,6 +97,7 @@ Soul=Soul
 Gender=Gender
 country.vn=Viet Nam
 country.us=USA
+country.china=China
 
 
 
