--- a/hayhay/resources/string_en.properties
+++ b/hayhay/resources/string_en.properties
@@ -14,7 +14,7 @@ news.startup=Start Up
 news.construction=Construction
 news.funny=Funny
 settings.mixnews=Show VietNam news and world news together
-favorite_countries=Show News of Countries
+favorite_countries=Show News Collected from Countries
 settings=Settings
 news.sience=Science
 news.politics=Politics
@@ -98,6 +98,10 @@ Gender=Gender
 country.vn=Viet Nam
 country.us=USA
 country.china=China
-
+country.asian=Asian
+language.vn=Vietnamese
+language.en=English
+language.china=Chinese
+setting.languages=Show News in Languages
 
 
