--- a/hayhay/resources/string_en.properties
+++ b/hayhay/resources/string_en.properties
@@ -99,6 +99,7 @@ country.vn=Viet Nam
 country.us=USA
 country.china=China
 country.asian=Asian
+country.british=British
 language.vn=Vietnamese
 language.en=English
 language.china=Chinese
